// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card with isCompact applied  1`] = `
<article
  className="pf-c-card pf-m-compact"
  data-ouia-component-id={6}
  data-ouia-component-type="PF4/Card"
  data-ouia-safe={true}
/>
`;

exports[`card with isHoverable applied  1`] = `
<article
  className="pf-c-card pf-m-hoverable"
  data-ouia-component-id={5}
  data-ouia-component-type="PF4/Card"
  data-ouia-safe={true}
/>
`;

exports[`className is added to the root element 1`] = `"pf-c-card extra-class"`;

exports[`renders with PatternFly Core styles 1`] = `
<article
  className="pf-c-card"
  data-ouia-component-id={0}
  data-ouia-component-type="PF4/Card"
  data-ouia-safe={true}
/>
`;
